# libmumble-legacy

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README  common.gypi  distclean.bash  gyp  libmumble.gyp  test.bash  test.bat
include/mumble/: ByteArray.h  Connection.h  Error.h  TLSConnection.h  X509Certificate.h  X509Verifier.h
proto/: Mumble.pb.cc  Mumble.pb.cpp  Mumble.pb.h  Mumble.proto  generate.bash
src/: ByteArray.cpp  ByteArray_test.cpp  Compat_android.cpp  Compat_android.h  Compat_android_test.cpp  Compat_win.cpp  Compat_win.h  Compat_win_test.cpp  Connection.cpp  Connection_p.cpp  Connection_p.h  Error.cpp  OpenSSLUtils.cpp  OpenSSLUtils.h  TLSConnection.cpp  TLSConnection_p.cpp  TLSConnection_p.h  UVBio.cpp  UVBio.h  UVUtils.cpp  UVUtils.h  Utils.cpp  Utils.h  X509Certificate.cpp  X509Certificate_p.cpp  X509Certificate_p.h  X509Certificate_test.cpp  X509HostnameVerifier.cpp  X509HostnameVerifier.h  X509HostnameVerifier_test.cpp  X509PEMVerifier.cpp  X509PEMVerifier.h  X509Verifier_android.cpp  X509Verifier_android.h  X509Verifier_mac.h  X509Verifier_mac.mm  X509Verifier_openssl.cpp  X509Verifier_openssl.h  X509Verifier_test.cpp  X509Verifier_unix.cpp  (+7 more)
testdata/: vet.bash
testdata/x509/altnames/: dns.cnf  dns.crt  dns.key  email.cnf  email.crt  email.key  generate.bash
testdata/x509/google.dk/: *.google.dk-chain-password.p12  *.google.dk-chain.p12  generate.bash
testdata/x509/selfsign/: generate.bash  self.crt  self.key
testdata/x509/selfsign-server/: generate.bash  self.cnf  self.crt  selfsign-server.key
testdata/x509/trickydn/: generate.bash  tricky.crt  tricky.key
